Context docBase= | Servlet | debug | Servlet Terms

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,19 @@
  "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
+<!-- deployment descriptor to be read by server
+   URL : CLASS
+   /students : com.java.servlets.StudentServlet
+ -->
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+   <servlet>
+     <servlet-name>studentServlet</servlet-name>
+     <servlet-class>com.java.servlets.StudentServlet</servlet-class>
+   </servlet>
+  <servlet-mapping>
+    <servlet-name>studentServlet</servlet-name>
+    <url-pattern>/students</url-pattern>
+  </servlet-mapping>
+
 </web-app>
